[gd_scene load_steps=4 format=3 uid="uid://b8vgyo4pfkaln"]

[ext_resource type="Script" uid="uid://b3vl0ygsp056y" path="res://Scripts/interactable.gd" id="1_51vf1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_51vf1"]
radius = 15.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b7dgr"]
size = Vector2(160, 64)

[node name="Interactable" type="Node2D" groups=["Interactable"]]
script = ExtResource("1_51vf1")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="CloseRangeArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CloseRangeArea2D"]
shape = SubResource("CircleShape2D_51vf1")

[node name="RangeArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RangeArea2D"]
shape = SubResource("RectangleShape2D_b7dgr")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="area_entered" from="CloseRangeArea2D" to="." method="on_close_range_enter"]
[connection signal="area_entered" from="RangeArea2D" to="." method="on_range_enter"]
[connection signal="area_exited" from="RangeArea2D" to="." method="on_range_exit"]
[connection signal="input_event" from="RangeArea2D" to="." method="on_mouse_click"]
[connection signal="mouse_entered" from="RangeArea2D" to="." method="on_mouse_hover"]
[connection signal="mouse_exited" from="RangeArea2D" to="." method="on_mouse_unhover"]
